--- a/quinzena3/sistema-loja/index.html
+++ b/quinzena3/sistema-loja/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Nome da Loja</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <title>Loja da Nay</title>
 </head>
-<body>
+<body id= "fundo">
     <div>
-        <h1>Bem-vind@ a <em>Produtos personalizados da Nay</em>!</h1>
-        <p>Aqui você vai encontrar os mais variáveis produtos personalizados para presentear uma pessoa com todo carinho </p>
+        <h1 id="title-da-loja"> Bem-vind@ a <em>Lojinha de Produtos personalizados da Nay</em>!</h1>
+        <p id="mensagem-principal">Aqui você vai encontrar os mais variáveis produtos personalizados para presentear uma pessoa com todo carinho </p>
     </div>
 
     <div>
@@ -18,18 +19,19 @@
         <a href="add-produto.html">Adicionar Produto</a>
         <a href="funcionarios.html">Funcionários</a>
     </div>
-
+<br>
     <div>
-        <!-- ADICIONAR INFORMAÇOES SOBRE SUA LOJINHA -->
+       <img src="imagens/caneca_capa.jpg" />
     </div>
-
+<br>
+<br>
     <div>
         <p>Siga-nos nas redes sociais!</p>
 
-        <div>
-            <img src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/25/25425.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/8/8800.png"/>
+        <div">
+            <img id="redes-sociais" src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
+            <img id="redes-sociais" src="https://image.flaticon.com/icons/png/512/25/25425.png"/>
+            <img id="redes-sociais" src="https://image.flaticon.com/icons/png/512/8/8800.png"/>
         </div>
     </div>
 </body>
