--- a/quinzena3/sistema-loja/funcionarios.html
+++ b/quinzena3/sistema-loja/funcionarios.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Funcionários</title>
 </head>
-<body>
+<body id="fundo">
     <div>
-        <p>Produtos personalizados da Nay</p>
+        <p>Lojinha de Produtos personalizados da Nay</p>
     </div>
        
     <div>
