--- a/Desafios de Empregabilidade/index.html
+++ b/Desafios de Empregabilidade/index.html
@@ -7,9 +7,15 @@
     <script src="Desafio1.js" defer ></script>
     <script src="Desafio2.js" defer ></script>
     <script src="Desafio3.js" defer ></script>
+    <script src="Desafio4.js" defer ></script>
+    <script src="Desafio5.js" defer ></script>
+    <script src="Desafio6.js" defer ></script>
+    <script src="Desafio7.js" defer ></script>
+    <script src="Desafio8.js" defer ></script>
     <title>Desafios de Empregabilidade</title>
 </head>
 <body>
     <h1>Desafios de Empregabilidade</h1>
+    <p>Respostas no console</p>
 </body>
 </html>
